update notices
