# routes/api/notices.js
@@ -12,13 +12,13 @@ const {
 const { schemas } = require("../../models/notices");
 const notices = require("../../controllers/notices");
 
-router.get("/category/:category", notices.getAll);
+router.get("/:category", notices.getAll);
 
-router.get('/:noticeId', validNoticeId, notices.getById);
+router.get('/notice/:noticeId', validNoticeId, notices.getById);
 
-router.patch('/:noticeId/favorite', authenticate, validNoticeId, notices.addFavorite);
+router.patch('/:noticeId/favorite', authenticate, validNoticeId, notices.addToFavorite);
 
-router.patch('/:noticeId/nofavorite', authenticate, validNoticeId, notices.removeFavorite);
+router.patch('/:noticeId/nofavorite', authenticate, validNoticeId, notices.removeFromFavorite);
 
 router.post(
   "/",
